[package]
name = "warp-devices"
version = "0.2.3"
edition = "2021"

[dependencies]
enum-iterator = "1.2"
log = "0.4"
num_enum = "0.5"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.9"
itertools = "0.10"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
rand = { version = "0.8.5", features = ["simd_support"] }
test-log = "0.2.11"

[[bench]]
name = "varium_c1100"
harness = false

[[example]]
name = "cms_regs"

[[example]]
name = "card_info"
