[package]
name = "warp-devices"
description = "Library for interfacing with Xilinx XDMA FPGAs"
version = "0.3.1"
authors = ["Vladimir Komendantskiy <komendantsky@gmail.com>"]
repository = "https://github.com/Quarky93/warpshell"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
enum-iterator = "1.2"
log = "0.4"
num_enum = "0.5"
once_cell = "1.17"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.9"
itertools = "0.10"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
rand = { version = "0.8.5", features = ["simd_support"] }
test-log = "0.2.11"

[[bench]]
name = "varium_c1100"
harness = false

[[example]]
name = "cms_regs"

[[example]]
name = "card_info"
