[package]
name = "warpshell"
description = "Library for interfacing with Xilinx FPGAs"
version = "0.1.1"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Tony Wu"
]
repository = "https://github.com/Quarky93/warpshell"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
amplify = "4.5"
arrayvec = "0.7.4"
enum-iterator = "1.4.1"
log = "0.4.20"
num_enum = "0.7"
once_cell = "1.18"
thiserror = "1.0.49"
warpshell-derive = "0.1.0"

[dev-dependencies]
ascii = "1.1.0"
assert_matches = "1.5"
criterion = "0.5.1"
env_logger = "0.10"
itertools = "0.11"
rand = { version = "0.9", git = "https://github.com/rust-random/rand.git", rev = "f3dd0b885c", features = [ "simd_support" ] }
test-log = "0.2.12"

[[bench]]
name = "u55n"
harness = false

[[bench]]
name = "bram"
harness = false

[[example]]
name = "u55n_regs"

[[example]]
name = "card_info"
